--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         /************* 视频序列 *************/
         var VIDEO_SEQUENCE = Array.from(
-            { length: 20 },
+            { length: 7 },
             (_, i) => `video${i + 1}.mp4`
         );
         var N_VIDEOS = VIDEO_SEQUENCE.length;
@@ -252,7 +252,7 @@
 
         /************* Yoke traces：示例，之后请用 active dwellTimes 来替换 *************/
         var YOKED_TRACES = {
-            "1": [10000, 12000, 20000, 15000, 18000]  // 单位：ms
+            "1": [13247, 6843, 11986, 5412, 14703, 9021, 10358, 7689, 12994, 5876, 14132, 8564, 11207, 6951, 15000, 6248, 9735, 13461, 5089, 12174]  // 单位：ms
             // 后续可以添加 "2": [...], "3": [...] 等
         };
 
@@ -708,12 +708,16 @@
             stimulus: `
       <div class="video-container" id="container-main">
         <div id="start-screen"
-             style="width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;">
-          <p class="center-text" style="font-size:22px;">
-            You will now <b>passively watch</b> a series of videos.<br>
-            Please do not swipe or tap. The videos will advance automatically.
-          </p>
-        </div>
+     style="width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;">
+  <div class="arrow">↑</div>
+  <p class="center-text" style="font-size:22px;">
+    Swipe up to watch the first video.
+  </p>
+  <p class="center-text" style="font-size:14px;opacity:0.7;margin-top:20px;">
+    After the first swipe, the videos will advance automatically.<br>
+    Please do not swipe or tap during playback.
+  </p>
+</div>
         <video id="main-video"
                src=""
                playsinline
@@ -818,10 +822,21 @@
 
                 // 不安装 swipe handler，完全忽略上滑
                 // 只在 start-screen 后自动开始
-                setTimeout(function () {
-                    startScreen.style.display = 'none';
-                    startVideo(0);
-                }, 1000); // 1 秒后开始，也可以改成点击触发
+                //setTimeout(function () {
+                //startScreen.style.display = 'none';
+                //startVideo(0);
+                //}, 1000); // 1 秒后开始，也可以改成点击触发
+
+                // ✅ PN：必须 swipe up 一次才开始播放第一个视频
+                var swipeRemover = installSwipeUpHandler(function () {
+                    if (currentIndex === -1) {
+                        startScreen.style.display = 'none';
+                        startVideo(0);
+
+                        // 只需要第一次 swipe 用来“开始”，之后立刻移除监听，保证 PN 仍是“non-swipe”
+                        if (swipeRemover) swipeRemover();
+                    }
+                }, 50);
 
                 video.onended = function () {
                     // 理论上不会依赖 onended，而是用 Tₐ；这里可以仅做日志
